fixed grayscale on ios

--- a/page/index.css
+++ b/page/index.css
@@ -141,11 +141,11 @@ hr {
 	flex-wrap: wrap;
 }
 .browser-support > li.disabled {
-	-webkit-filter: grayscale(1);
-	-webkit-filter: grayscale(100%);
 	filter: grayscale(100%);
 	filter: gray;
 	filter: url("data:image/svg+xml;utf8,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' height='0'><filter id='greyscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0' /></filter></svg>#greyscale");
+	-webkit-filter: grayscale(1);
+	-webkit-filter: grayscale(100%);
 }
 .browser-support > li {
 	/* float: right; */
@@ -341,10 +341,16 @@ hr {
 	.kv-logo {
 		height: 200px;
 		padding: 20px 5% 60px;
+		position: absolute;
+		opacity: 0.1;
+		right: 0;
+		left: 0;
+		margin-top: -5%;
 	}
 	.kv-caption {
 		padding-left: 0;
 		text-align: center;
+		position: relative;
 	}
 	.kv-header {
 		justify-content: center;
